# AlphaCouncil

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
alpha_council/: agent.py  intent_gate.py  master_selector.py  masters_consolidator.py
alpha_council/.adk/: session.db
alpha_council/analysts/: __init__.py  chip_analyst.py  fundamental_analyst.py  news_analyst.py  psychology_analyst.py  sentiment_analyst.py  technical_analyst.py
alpha_council/managers/: __init__.py  research_manager.py
alpha_council/masters/: __init__.py  aswath_damodaran.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  michael_burry.py  mohnish_pabrai.py  nassim_taleb.py  peter_lynch.py  phil_fisher.py  rakesh_jhunjhunwala.py  stanley_druckenmiller.py  warren_buffett.py
alpha_council/researchers/: __init__.py  bear_researcher.py  bull_researcher.py
alpha_council/risk/: __init__.py  aggressive_debater.py  conservative_debater.py  neutral_debater.py
alpha_council/trader/: __init__.py  trader.py
alpha_council/utils/: conditional_pipeline.py  dynamic_masters_panel.py  market_snapshot.py  master_factory.py  master_runtime.py
docs/: external-data.md
docs/analysts/: README.md  chip-analyst.md  fundamentals-analyst.md  psychology-analyst.md  technical-analyst.md
docs/analysts/fundamental_analyst/: README.md
docs/architecture/: fundamentals-storage-cache.md
docs/data-models/: fundamentals-schema.md
guardrail/: stock_code_guard.py
tests/: test_agent_import.py  test_master_selector.py
