[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-council"
version = "0.1.0"
description = "Multi-agent investment analysis framework built with Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "feedparser",
    "google-adk",
    "lxml",
    "numpy",
    "pandas",
    "requests",
    "ta",
    "yfinance",
]

[tool.setuptools.packages.find]
include = ["alpha_council*"]
